[package]
name = "codedefender-api"
version = "0.2.8"
edition = "2024"
description = "Blocking client library for the CodeDefender binary obfuscation API."
license = "Apache-2.0"
repository = "https://github.com/codedefender-io/api"
documentation = "https://docs.rs/codedefender-api"
readme = "README.md"
keywords = ["obfuscation", "binary", "security", "api", "client"]
categories = ["api-bindings", "network-programming", "command-line-utilities"]
homepage = "https://codedefender.io"

[dependencies]
codedefender-config = { path = "../config", version = "0.3.9" }
once_cell = "1.21.3"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = "1.0.219"
serde_json = "1.0.140"
