[package]
name = "codedefender-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11.8"
log = "0.4.27"
codedefender-api = { path = "../api" }
reqwest = { version = "0.12.22", features = ["blocking"] }
symbolic-demangle = "12.15.5"
symbolic-common = "12.15.5"
zstd = { version = "0.13", features = ["wasm"] }
bincode = { version = "2.0.1", features = ["derive", "serde"] }
pdb = "*"
fallible-iterator = "*"