[package]
name = "codedefender-config"
version = "0.3.8"
edition = "2024"
description = "Configuration utilities for CodeDefender, a code obfuscation and protection system."
license = "Apache-2.0"
repository = "https://github.com/codedefender-io/api"
homepage = "https://codedefender.io"
documentation = "https://docs.rs/codedefender-config"
readme = "README.md"
keywords = ["obfuscation", "config", "security", "binary"]
categories = ["config", "development-tools", "security"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }